--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           </h3>
         </header>
 
-        <div class="row">
+        <div class="row" id="row-container">
 
           <div class="col-xl-4 text-center" data-aos="fade-right" data-aos-delay="100">
             <img src="assets/img/features-3.png" class="img-fluid p-4" alt="">
